Persist and manage video URL import jobs